TIKA-4397: replace deprecated